kind of figured out spacing issues

--- a/demo/src/example.css
+++ b/demo/src/example.css
@@ -7,3 +7,7 @@
     width: 400px;
     padding-left: 400px;
 }
+
+.alignTop{
+    verticalAlign: top;
+}
